Start work on UI and associate data and UI

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <title>Battleship</title>
 </head>
 <body>
+    <h1>Battleship</h1>
+    <button class="start">New Game</button>
+    <div class="windows-container">
+        <div class="my-window"></div>
+        <div class="op-window"></div>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
